corrected problem with overlapping divs and completed projects section

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ main h2 {
   font-size: 2rem;
   font-weight: bold;
   padding-left: 2rem;
+  flex-direction: column;
 }
 
 /** Jumbotron **/
@@ -105,6 +106,10 @@ main h2 {
 
 
 /** Featured Section **/
+#featured {
+  clear: both;
+}
+
 #featured h3 {
   font-size: 1.75rem;
   font-weight: bold;
@@ -140,11 +145,11 @@ main h2 {
 
 
 /** Projects Section **/
-
 #projects {
   text-align: left;
+  clear: both;
 }
 
-#projects h2 {
-  padding-top: 2rem;
+#projects .project {
+  margin-bottom: 50px;
 }
